# vq

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  cargo-generate.toml  pyproject.toml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  lint.yml  publish.yml  release.yml  tests.yml
assets/logos/: README.md
benches/: bench_opq.rs  bench_rvq.rs  bench_sq.rs  bench_tsvq.rs  bq_bench.rs  main.rs  pq_bench.rs  utils.rs
docs/: README.md
notebooks/: README.md  performance_analysis.ipynb
src/: bq.rs  cli.rs  distances.rs  exceptions.rs  lib.rs  logging.rs  main.rs  opq.rs  pq.rs  rvq.rs  settings.rs  sq.rs  tsvq.rs  utils.rs  vector.rs
tests/: bq_tests.rs  distances_tests.rs  opq_tests.rs  pq_tests.rs  rvq_tests.rs  sq_tests.rs  test_bq.rs  test_distances.rs  test_tsvq.rs  tsvq_tests.rs  utils.rs  vector_tests.rs
